fix: adjusted logo size on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -38,7 +38,8 @@ body {
 .tm-logo {
     display: block;
     margin: 0 auto;
-    width: 300px;
+    width: 80%;
+    max-width: 275px;
 }
 
 h2 {
